victorstantondotcom/src/assets/pages/MovementTherapy.css
#mt-title {
    padding: 16vh 0 0 0;
    text-align: center;
    /* outline: 3px red solid; */
      font-size: 10vh;
      color: #1c5460;
}

.mt-main {
    /* outline: 3px #369B76 solid; */
    display: flex;
}

#mt-pic {
    width: 40vh;
    height: auto;
    outline: 0.5vh #60BFC4 solid;
    border-radius: 30%;
    display: block;
    margin: 1vh 1vh 1vh auto ;
    box-shadow: -1vh -1vh 3.5vh #369B76;
    object-fit: cover;
}

.mt-text {
    width: 50vh;
    height: auto;
    margin: 5vh auto 5vh 5vh ;
    line-height: 1.4;
    font-size: 2.5vh;
}
.mt-text::first-letter {
    font-size: 10vh;
    font-weight: 700;
    color: #1c5460;
    float: left;
    margin-right: 1.5vh;
    line-height: 1;
}

@media (max-width: 820px) {
    .mt-main {
    display: block;
 
    }
    #main-tag {
    padding-top: 15vh;
    width: 70%;
    padding-left: 30%;
    }
    #mt-pic {
    height: auto;
    border-radius: 30%;
    display: block;
    margin: auto;
    object-fit: cover;
    }

    .mt-text {
        height: auto;
        text-align: left;
        /* outline: 3px #369B76 solid; */
        margin: 10% auto;
        line-height: 1.4;
    }
    

    
}

